--- a/css/energilux.css
+++ b/css/energilux.css
@@ -8722,19 +8722,19 @@ float: left;
     .nv_menu .sub_menu_3 {
         width: 700px;
         height: 300px;
-        left: -143px;
+        left: -130px;
     }
 
     .nv_menu .sub_menu_4 {
         width: 980px;
         height: 300px;
-        left: -597px;
+        left: -588px;
     }
 
     .nv_menu .sub_menu_5 {
         width: 980px;
         height: 300px;
-        left: -793px;
+        left: -788px;
     }
 
     .nv_menu .sub_menu_6 {
@@ -8951,70 +8951,70 @@ float: left;
     .nv_menu li ul .sub_menu_imagem #img-sm-4-1 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -31px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -31px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-2 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -323px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -323px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-3 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -615px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -615px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-4 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -907px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -907px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-5 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -1497px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -1202px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-6 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -1792px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -1497px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-7 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -2081px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -1792px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-8 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -2398px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -2677px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-9 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -2724px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -2087px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-4-10 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-4.jpg?v=123) no-repeat -1px -2724px;
+        background: url(/arquivos/img-sub-menu-4-v2.png) no-repeat -1px -2382px;
         display: none;
     }
 
@@ -9025,63 +9025,63 @@ float: left;
     .nv_menu li ul .sub_menu_imagem #img-sm-5-1 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -31px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -2087px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-2 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -338px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -322px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-3 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -653px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -2382px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-4 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -964px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -31px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-5 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -1275px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -907px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-6 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -1590px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -1792px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-7 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -1904px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -1497px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-8 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -1904px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -1202px;
         display: none;
     }
 
     .nv_menu li ul .sub_menu_imagem #img-sm-5-9 {
         width: 418px;
         height: 260px;
-        background: url(/arquivos/img-sub-menu-5.jpg?v=123) no-repeat -1px -1904px;
+        background: url(/arquivos/img-sub-menu-5-v2.png) no-repeat -1px -615px;
         display: none;
     }
 
@@ -11330,7 +11330,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
 .rf-vd-10w,
 .rf-vd-20w,
 .rf-vd-30w,
-.rf-vd-50w {
+.rf-vd-50w,
+.rf-rgb-30w,
+.rf-rgb-20w,
+.rf-rgb-10w {
     position: relative;
     display: block;
     padding: 4px;
@@ -11357,7 +11360,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
 .rf-vd-10w::before,
 .rf-vd-20w::before,
 .rf-vd-30w::before,
-.rf-vd-50w::before {
+.rf-vd-50w::before,
+.rf-rgb-30w::before,
+.rf-rgb-20w::before,
+.rf-rgb-10w::before {
     position: absolute;
     top: 93px;
     left: -4px;
@@ -11428,6 +11434,18 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
     background-image: url("/arquivos/RF-VD-50w.png")
 }
 
+.rf-rgb-30w::before {
+    background-image: url("/arquivos/RF-RGB-30W.png")
+}
+
+.rf-rgb-20w::before {
+    background-image: url("/arquivos/RF-RGB-20W.png")
+}
+
+.rf-rgb-10w::before {
+    background-image: url("/arquivos/RF-RGB-10W.png")
+}
+
 @media only screen and (min-width: 701px) and (max-width: 799px) {
     .rf-bq-10w::before,
     .rf-bq-20w::before,
@@ -11446,7 +11464,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
     .rf-vd-10w::before,
     .rf-vd-20w::before,
     .rf-vd-30w::before,
-    .rf-vd-50w::before {
+    .rf-vd-50w::before,
+	.rf-rgb-30w::before,
+	.rf-rgb-20w::before,
+	.rf-rgb-10w::before {
         top: 93px !important;
         left: -4px;
     }
@@ -11470,7 +11491,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
     .rf-vd-10w::before,
     .rf-vd-20w::before,
     .rf-vd-30w::before,
-    .rf-vd-50w::before {
+    .rf-vd-50w::before,
+	.rf-rgb-30w::before,
+	.rf-rgb-20w::before,
+	.rf-rgb-10w::before {
         top: 27px;
         left: -4px;
     }
@@ -11494,7 +11518,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
     .rf-vd-10w::before,
     .rf-vd-20w::before,
     .rf-vd-30w::before,
-    .rf-vd-50w::before {
+    .rf-vd-50w::before,
+	.rf-rgb-30w::before,
+	.rf-rgb-20w::before,
+	.rf-rgb-10w::before {
         top: 48px;
         left: -4px;
     }
@@ -11517,7 +11544,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
 .product-top .rf-vd-10w::before,
 .product-top .rf-vd-20w::before,
 .product-top .rf-vd-30w::before,
-.product-top .rf-vd-50w::before {
+.product-top .rf-vd-50w::before,
+.product-top .rf-rgb-30w::before,
+.product-top .rf-rgb-20w::before,
+.product-top .rf-rgb-10w::before {
     top: 403px;
     left: -4px;
     height: 119px;
@@ -11543,7 +11573,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
     .product-top .rf-vd-10w::before,
     .product-top .rf-vd-20w::before,
     .product-top .rf-vd-30w::before,
-    .product-top .rf-vd-50w::before {
+    .product-top .rf-vd-50w::before,
+	.product-top .rf-rgb-30w::before,
+	.product-top .rf-rgb-20w::before,
+	.product-top .rf-rgb-10w::before {
         top: 303px;
         height: 119px;
         width: 103px;
@@ -11569,7 +11602,10 @@ td.value-field.Kit-HTML, td.value-field.Sugestao-Variacao-HTML {
     .product-top .rf-vd-10w::before,
     .product-top .rf-vd-20w::before,
     .product-top .rf-vd-30w::before,
-    .product-top .rf-vd-50w::before {
+    .product-top .rf-vd-50w::before,
+	.product-top .rf-rgb-30w::before,
+	.product-top .rf-rgb-20w::before,
+	.product-top .rf-rgb-10w::before {
         top: 130px;
         height: 119px;
         width: 103px;
@@ -12451,7 +12487,7 @@ body.home .shelf ul .slick-next{
         left: 19px;
         width: 100%;
     }
-    .rf-bq-10w::before, .rf-bq-20w::before, .rf-bq-30w::before, .rf-bq-50w::before, .rf-bq-100w::before, .rf-bq-200w::before, .rf-bq-300w::before, .rf-bf-10w::before, .rf-bf-20w::before, .rf-bf-30w::before, .rf-bf-50w::before, .rf-bf-100w::before, .rf-bf-200w::before, .rf-bf-300w::before {
+    .rf-bq-10w::before, .rf-bq-20w::before, .rf-bq-30w::before, .rf-bq-50w::before, .rf-bq-100w::before, .rf-bq-200w::before, .rf-bq-300w::before, .rf-bf-10w::before, .rf-bf-20w::before, .rf-bf-30w::before, .rf-bf-50w::before, .rf-bf-100w::before, .rf-bf-200w::before, .rf-bf-300w::before, .rf-vd-10w::before, .rf-vd-20w::before, .rf-vd-30w::before, .rf-vd-50w::before, .rf-rgb-30w::before, .rf-rgb-20w::before, .rf-rgb-10w::before {
         top: 166px !important;
         left: -25px !important;
     }
@@ -12653,11 +12689,67 @@ body.home .shelf ul .slick-next{
 }
 /* push-description-top 14 palavras*/
 
-/*Ajuste colecao p*/
+/* ocultar colecao product-image-container */
 .product-image-container .colecaoa::before,
 .colecaob::before,
 .colecaoc::before {
-    top: 8px;
-    left: -38px
+	display: none
 }
-/*Ajuste colecao p*/
+/* ocultar colecao product-image-container */
+
+/* img promo */
+.img-promo-led {
+	margin-bottom: 5px
+}
+                                                    
+@media only screen and (max-width: 1023px) {
+  .img-promo-led {
+  	text-align: center;
+  	margin-top: 10px;
+  	margin-bottom: 0px
+  }
+}
+/* img promo */
+
+/* colecao promo */
+.promo24,
+.promo29,
+.promo39 {
+    display: block;
+    font-size: 0px;
+    color: transparent
+}
+
+.promo24::before,
+.promo29::before,
+.promo39::before {
+    content: "";
+    display: inline-block;
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 100%
+}
+
+.promo24::before {
+    background-image: url("/arquivos/promo24-red.png")
+}
+
+.promo29::before {
+    background-image: url("/arquivos/promo29-red.png")
+}
+
+.promo39::before {
+    background-image: url("/arquivos/promo39-red.png")
+}
+
+@media only screen and (max-width: 600px) {
+    .promo24::before, .promo29::before, .promo39::before {
+        background-size: contain;
+        height: 35px
+    }
+}
+
+.product-image-container .promo24::before, .promo29::before, .promo39::before {
+    display: none
+}
+/* colecao promo */
