--- a/css/energilux.css
+++ b/css/energilux.css
@@ -2819,7 +2819,7 @@ body {
     position: relative;
     width: 100%;
     display: inline-block;
-    height: 70px;
+    height: auto;
     padding: 10px 20px;
     margin-bottom: 10px
 }
